--- a/quiz-service/Dockerfile
+++ b/quiz-service/Dockerfile
@@ -3,18 +3,21 @@ FROM maven:3.9.4-amazoncorretto-21 AS builder
 WORKDIR /app
 
 # Copier les fichiers Maven
-COPY pom.xml .
-COPY src ./src
+# POM racine
+COPY pom.xml ./
+# POM du module
+COPY quiz-service/pom.xml ./quiz-service/
+COPY quiz-service/src ./quiz-service/src
 
-# Compiler et packager le JAR
-RUN mvn clean package -DskipTests
+# Compiler et packager le module
+RUN mvn -pl quiz-service clean package -DskipTests
 
 # Stage 2: runtime
 FROM amazoncorretto:21
 WORKDIR /app
 
 # Copier le JAR depuis le builder
-COPY --from=builder /app/target/quiz-service-0.0.1-SNAPSHOT.jar quiz-service.jar
+COPY --from=builder /app/quiz-service/target/quiz-service-0.0.1-SNAPSHOT.jar quiz-service.jar
 
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "quiz-service.jar"]
